--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -36,7 +36,7 @@ where a $\mod L$ operation is intended: $L+1 \leftrightarrow 1$. I want to indag
 		&&\text{Attractive interaction} \\
 	\end{aligned}
 \]
-Intuitively, if the interaction becomes dominant with respect to the hopping dynamics, the combined effect of attraction/repulsion and Pauli exclusion principle should lead to two different forms of localization. On one hand, if the interaction is strong and attractive, the ground state should be uniformly filled, because fermions save energy both by closed packing and by increasing density due to the negative chemical potential contribution ($\mu > 0$). On the other hand, a strong repulsive interaction could lead to an half-filled chain, which sacrifices the chemical potential energy gain lost by reducing the particle number by not paying the energy cost of having nearby fermions. In both cases hopping is suppressed, thus fermions are localized; now it is a matter of seeing if these states are actually realized.
+Intuitively, if the interaction becomes dominant with respect to the hopping dynamics, the combined effect of attraction/repulsion and Pauli exclusion principle should lead to two different forms of localization. On one hand, if the interaction is strong and attractive, the ground state should be uniformly filled, because fermions save energy both by closely packing and by increasing density due to the negative chemical potential contribution ($\mu > 0$). On the other hand, a strong repulsive interaction could lead to an half-filled chain, which sacrifices the chemical potential energy gain lost by reducing the particle number by not paying the energy cost of having nearby fermions. In both cases hopping is suppressed, thus fermions are localized; now it is a matter of seeing if these states are actually realized.
 
 \begin{figure}[t]
 	\centering
