--- a/Report/sections/theory.tex
+++ b/Report/sections/theory.tex
@@ -167,6 +167,7 @@ Particle-hole excitations are always made of a combined creation and annihilatio
 		\toprule
 		Object && Density expression\\
 		\midrule
+		&& \\
 		Fermionic field && $\displaystyle \hat \psi_s (x) = \hat U_s \exp\left\{ \sgn(s) \frac{2\pi}{L} \sum_q \frac{e^{iqx}}{q} \hat \rho_s (-q) \right\}$ \\
 		&&\\
 		Boson operator && $\displaystyle \hat b_q = \sqrt{\frac{2\pi}{\abs{q}L}} \sum_{s \in \left\{\mathrm L, \mathrm R\right\}} \theta \left(\sgn(s) q\right) \hat \rho_s^\dagger (-q)$ \\
@@ -175,6 +176,7 @@ Particle-hole excitations are always made of a combined creation and annihilatio
 			\nabla \hat \phi(x) &= - \pi \left[ \hat \rho_\mathrm{R}(x) + \hat \rho_\mathrm{L}(x) \right] \\ 
 			\nabla \hat \theta(x) &= \pi \left[ \hat \rho_\mathrm{R}(x) - \hat \rho_\mathrm{L}(x) \right]
 		\end{aligned}$ \\
+		&& \\
 		\bottomrule
 	\end{tabular}
 	\caption{Summary of the relevant quantities of the bosonization scheme as expressions involving physical (side resolved) fermionic density.}
@@ -226,7 +228,7 @@ coupling left-going and right-going fermions. I collect $g_4$ processes as those
 	\underbrace{\hat \rho_\mathrm{R} (x_1) \hat \rho_\mathrm{R} (x_2) \quad \hat \rho_\mathrm{L} (x_1) \hat \rho_\mathrm{L} (x_2)}_{g_4} \qquad \underbrace{\hat \rho_\mathrm{R} (x_1) \hat \rho_\mathrm{L} (x_2) \quad \hat \rho_\mathrm{L} (x_1) \hat \rho_\mathrm{R} (x_2)}_{g_1 = g_2}
 \]
 At this point, I make an apparently heavy assumption. Let me use for now a contact-like interaction\footnote{
-	For the type of interaction I will consider in this project, which is a NN neighbors interaction onto a closed chain, this assumption makes sense in thermodynamic limit.
+	For the type of interaction I will consider in this project, which is a NN neighbors interaction onto a closed chain, this assumption actually makes sense in thermodynamic limit.
 },
 \[
 	\left[V(x-y)\right] = \frac{1}{2} \begin{bmatrix}
@@ -253,7 +255,7 @@ which is remarkable: considering this process, the hamiltonian looks like:
 \[
 	\hat K_0 + \hat V_4 + \hat V_2 = \frac{1}{2\pi} \int_0^L dx \, \underbrace{v_F \left( 1 + \frac{g_4}{2\pi v_F} \right)}_{u} \left[ \left( \nabla \hat \phi(x) \right)^2 + \left( \nabla \hat \theta(x) \right)^2 \right] + \hat V_2
 \]
-Now, $u$ is the \textbf{bosons velocity renormalized by $g_4$-like interactions}.
+Now, $u$ is the bosons velocity renormalized by $g_4$-like interactions.
 
 \paragraph{$g_2$ process.} In a very similar fashion, it is easy to obtain
 \[
@@ -280,7 +282,7 @@ a condition simultaneously satisfied by
 	\qquad
 	y_i \equiv \frac{g_i}{\pi v_F}
 \]
-This collection of equation is all I need to completely map a one-dimensional interacting fermionic problem into a renormalized free bosonic problem. Everything I have done hold for spinless fermions and contact interaction, but can be extended.
+This collection of equation is everything one needs to completely map a one-dimensional interacting fermionic problem into a renormalized free bosonic problem. Everything I have done hold for spinless fermions and contact interaction, but can be extended.
 
 \subsubsection{The euclidean action}
 
@@ -590,4 +592,8 @@ The most important detail to notice with respect to the $\mathrm{CDW}$ correlato
 
 \subsubsection{Meaning of the Luttinger parameter $K$}\label{subsubsec:meaning-of-the-luttinger-parameter-K}
 
-The Luttinger parameter $K$ ultimately contains all the relevant physics of the problem. As \citeauthor{giamarchi2003quantum} explains \cite[Sec.~2.2.2]{giamarchi2003quantum}, \todo
+The Luttinger parameter $K$ ultimately contains all the relevant physics of the problem. As \citeauthor{giamarchi2003quantum} explains \cite[Sec.~2.2.2]{giamarchi2003quantum}, correlations are connected to imaginary-time (and dynamical) susceptibilities. The very key point is that a power-law scaling of correlations translates in an analogous power-law scaling of susceptibilities, which leads to integer-order poles in these last. This passage is made by Fourier-transforming quantities in three dimensions, and considering the low-dimensionality as a constraint.
+
+It turns out, $K=1$ discriminates two ``regions''. For $K<1$, $\mathrm{SU}$ correlations are strongly suppressed and so is the respective susceptibility. The state does not respond to superconducting pairing. Inversely, $\mathrm{CDW}$ correlations and susceptibility diverge. The state tends to order accordingly. Particles do not pair: interactions are repulsive. The situation is flipped for $K>1$, with the divergent correlation now being the superconducting one. The dominant interaction is now attractive. 
+
+This is a matter of identifying the most divergent fluctuation in one dimension, which is, the most likely to be stabilized by an arbitrarily weak three-dimensional coupling \cite{giamarchi2003quantum}. This is most true for extreme Luttinger parameter values, $K\to0$ or $K \gg 1$. This confused comment ends this section: in the next, I study theoretically and bosonize a spinless Fermi-Hubbard chain.
