fixed some typos

--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -7,7 +7,7 @@ In this project I limit myself to a polarized (spinless fermions) system. Extens
 		\hat c_j^\dagger \hat c_k + \hat c_k^\dagger \hat c_j 
 	\right] + V \sum_{\ev{j,k}} \hat n_j \hat n_k - \mu \sum_{j=1}^L \hat n_j
 \end{equation}
-defined on a closed $1D$ lattice ring, as in Fig.~\ref{subfig:lattice-ring}.
+defined on a closed one-dimensional lattice ring, as in Fig.~\ref{subfig:lattice-ring}.
 This is a simple nearest-neighbors (NN) interacting lattice hamiltonian with NN interaction $V$, chemical potential $\mu$ and hopping amplitude $t$,
 \[
 	t, V, \mu \in \mathbb{R}
